agrego sombras a la consola

--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
     <div class="container">
         <div class="all">
             <div class="anbernic">
-                <div class="part1"></div>
-                <div class="part2"></div>
-                <div class="part3"></div>
+                <div class="joystick1">
+                    <div class="select">SELECT</div>
+                    <div class="selectbutton"></div>
+                    
+
+                          
+
+                    </div> </div>
+                <div class="screen"></div>
+                <div class="joystick2"></div>
          </div>
     </div>
 </div>
