se añade boton de flechas para el movimiento de la consola

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <div class="joystick1">
                     <div class="select">SELECT</div>
                     <div class="selectbutton"></div>
+                    <div class="arrow1"></div>
+                    <div class="arrow2"></div>
+                    <div class="joyjoy1"></div>
                     
 
                           
