add buttons X,A,B,Y with color

--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
                     <div class="X">X</div>
                     <div class="B">B</div>
                 </div></div>
-            
-            <div class="button2"></div>
+            <div class="button2">
+        </div>
             <div class="buttonrow">
-                <div class="Y"></div>
+                <div class="Y">Y</div>
+                <div class="A">A</div>
             </div>
+        <div class="joy3">
+            <div class="joy4"></div>
+        </div>
 
 
         </div>
