--- a/index.html
+++ b/index.html
@@ -9,57 +9,81 @@
     <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <div class="all">
-            <div class="anbernicborder">
-            <div class="anbernic">
-                <div class="joystick1">
-                    <div class="select">SELECT</div>
-                    <div class="selectbutton"></div>            
-                <div class="arrow1">                      
-                    <div class="arrowcol">
-                        <div class="arrowup">▲</div>
-                        <div class="arrowdown">▼</div>
-                </div>
-                    <div class="arrowrow"></div>
-                    </div>
-                    <div class="arrow2">
-                        
-                        <div class="arrowleft">◀</div>
-                        <div class="circle"></div>
-                        <div class="arrowright">▶</div>
-                    </div>
-                    <div class="joy1">
-                    <div class="joy2"></div></div>
-                </div> 
-            <div class="borderscreen">
-                <div class="screen">
-                    <div class="game">
+
+    <script>
+        function addImage(){
+        let image = document.getElementById("image");
+        document.getElementById("startbutton")
+        
+        if(image.style.display === '') image.style.display = 'block'
+       else image.style.display = image.style.display === 'none' ? 'block' : 'none'
+            }
+    </script>
+
+
+    <div class="container">      
+         <div class="all">
+             <div style="user-select: none;">
+                <div class="outsidebuttons"> 
+                    <div class="outmidleft"></div>
+                    <div class="outmidright"></div>
+                    <div class="right"></div>
+                    <div class="left"></div>
+                    <div class="buttonupleft"></div>
+                    <div class="buttonupright">                           
+              </div>
+                 <div class="anbernicborder">
+                    <div class="anbernic">                  
+                       <div class="joystick1">
+                          <div class="select">SELECT</div>
+                          <div class="selectbutton">                           
+                     </div>            
+                         <div class="arrow1">                      
+                             <div class="arrowcol">
+                             <div class="arrowup">▲</div>
+                             <div class="arrowdown">▼                           
+                         </div>
+                     </div>                  
+                 </div>
+                     <div class="arrow2">                                 
+                           <div class="arrowleft">◀</div>
+                           <div class="circle"></div>
+                           <div class="arrowright">▶
+                      </div>
+                 </div>
+                      <div class="joy1">
+                      <div class="joy2"></div>
+                  </div>
+             </div> 
+                   <div class="borderscreen">
+                        <div class="screen">
+                            <img id="image" src="/img/image.png" alt="" style="display:none;">
+                       </div>
+                   </div>
+                        <div class="joystick2">
+                           <div class="start">START</div><div class="lightbutton"></div>
+                           <div class="startbutton" onclick=addImage()>
+                       </div>              
+                            <div class="button1">
+                            <div class="buttoncol">
+                               <div class="X">X</div>
+                               <div class="B">B</div>
+                           </div>
+                        </div>
+                           <div class="buttonrow">
+                               <div class="Y">Y</div>
+                               <div class="A">A                              
+                            </div>
+                      </div>
+                            <div class="joy3">
+                            <div class="joy4"></div>
+                       </div>
+                   </div>
                 </div>
             </div>
         </div>
-    <div class="joystick2">
-            <div class="start">START</div>
-        <div class="startbutton">
-           </div>
-             <div class="button1">
-                  <div class="buttoncol">
-                    <div class="X">X</div>
-                    <div class="B">B</div>
-                </div></div>
-            <div class="button2">
-        </div>
-            <div class="buttonrow">
-                <div class="Y">Y</div>
-                <div class="A">A</div>
-            </div>
-        <div class="joy3">
-            <div class="joy4"></div>
-            </div>
-         </div>
-      </div>
+     </div>
    </div>
-</div>
 </div>
 
 
