fix again start button with img

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
              </div> 
                    <div class="borderscreen">
                         <div class="screen">
-                            <img id="image" src="./img/image.png">
+                            <img id="image" src="./img/image.png" alt="" style="display:none;">
                        </div>
                    </div>
                         <div class="joystick2">
